src/test/deca/syntax/invalid/resultats/test13_float-synt.res
./src/test/deca/syntax/invalid/test13_float.deca:16:10: no viable alternative at input 'p12'
